--- a/src/main/resources/fxml/actionWizard/ImageCropperPanel.fxml
+++ b/src/main/resources/fxml/actionWizard/ImageCropperPanel.fxml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane fx:id="wizardPane" styleClass="wizardPane" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.ImageCropperPanelController">
-    <VBox fx:id="vbox" minHeight="${wizardPane.height}" minWidth="${wizardPane.width}" prefHeight="400" prefWidth="600" spacing="10.0" styleClass="vbox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <StackPane fx:id="imagePane" minHeight="${wizardPane.height - 60}" minWidth="${wizardPane.width}" styleClass="imagePane" VBox.vgrow="ALWAYS">
-            <ImageView fx:id="imageView" minHeight="${imagePane.height}" minWidth="${imagePane.width}" preserveRatio="true" styleClass="imageView">
-            </ImageView>
-        </StackPane>
-        <ToolBar minWidth="${wizardPane.width}" prefHeight="32.0" prefWidth="400" styleClass="toolbar"  VBox.vgrow="NEVER">
-            <items>
-                <HBox alignment="CENTER" minWidth="${wizardPane.width + 20}" prefHeight="32.0" styleClass="hbox">
-                    <Spinner fx:id="xCordSpinner" styleClass="horizontal-spinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
-                    <Spinner fx:id="yCordSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
-                    <Spinner fx:id="widthSpinner" styleClass="horizontal-spinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
-                    <Spinner fx:id="heightSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" />
-                    <Button text="Select All" />
-                </HBox>
-            </items>
-        </ToolBar>
-    </VBox>
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="700.0" styleClass="wizardPane" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.ImageCropperPanelController">
+   
+
+   
+    <ImageView fx:id="imageView" preserveRatio="true" styleClass="imageView"  />
+
+
+
+     <ToolBar minWidth="${wizardPane.width}" prefHeight="42.0" prefWidth="700.0" styleClass="toolbar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+         <items>
+             <HBox alignment="CENTER" minWidth="${wizardPane.width + 20}" prefHeight="32.0" prefWidth="685.0" styleClass="hbox">
+                 <Spinner editable="true" prefHeight="32.0" prefWidth="80.0" styleClass="horizontal-spinner" fx:id="xCordSpinner">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Spinner>
+                 <Spinner fx:id="yCordSpinner" editable="true" prefHeight="32.0" prefWidth="80.0">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Spinner>
+                 <Spinner fx:id="widthSpinner" editable="true" prefHeight="32.0" prefWidth="80.0" styleClass="horizontal-spinner">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Spinner>
+                 <Spinner fx:id="heightSpinner" editable="true" prefHeight="32.0" prefWidth="80.0">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Spinner>
+                 <Button text="Select All" />
+             </HBox>
+         </items>
+     </ToolBar>
 </AnchorPane>
