--- a/src/main/resources/fxml/OptionsWindow.fxml
+++ b/src/main/resources/fxml/OptionsWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:controller="manager.controllers.OptionsWindowController" maxHeight="320.0" maxWidth="560.0" minHeight="320.0" minWidth="560.0" prefHeight="320.0" prefWidth="560.0" styleClass="root" stylesheets="@/styles/optionsWindow.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="320.0" maxWidth="560.0" minHeight="320.0" minWidth="560.0" prefHeight="320.0" prefWidth="560.0" styleClass="root" stylesheets="@/styles/optionsWindow.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.OptionsWindowController">
    <children>
       <TabPane fx:id="tabPane" prefHeight="320.0" prefWidth="560.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
@@ -17,11 +18,16 @@
                   <AnchorPane>
                      <children>
                         <ComboBox fx:id="deviceProfileComboBox" layoutX="201.0" layoutY="45.0" prefWidth="150.0" />
-                        <Label layoutX="14.0" layoutY="44.0" text="Device Profile" />
+                        <Label layoutX="18.0" layoutY="49.0" text="Device Profile" />
                         <Label layoutX="14.0" layoutY="78.0" />
                         <TextField fx:id="manualScaleSizeTextField" layoutX="201.0" layoutY="79.0" prefHeight="23.0" prefWidth="151.0" />
-                        <Label layoutX="14.0" layoutY="78.0" text="Manual Scale Size" />
-                        <CheckBox fx:id="manualScaleEnableCheckBox" contentDisplay="RIGHT" layoutX="288.0" layoutY="109.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enable" />
+                        <Label layoutX="18.0" layoutY="83.0" text="Manual Scale Size" />
+                        <CheckBox fx:id="manualScaleEnableCheckBox" contentDisplay="RIGHT" layoutX="295.0" layoutY="110.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enable" />
+                        <TextField fx:id="deviceDirectoryTextField" layoutX="201.0" layoutY="134.0" prefHeight="25.0" prefWidth="88.0" />
+                        <Label layoutX="18.0" layoutY="137.0" text="Device Directory" />
+                        <Button layoutX="295.0" layoutY="134.0" mnemonicParsing="false" text="Change" />
+                        <ComboBox fx:id="languageComboBox" layoutX="202.0" layoutY="169.0" prefWidth="150.0" />
+                        <Label layoutX="19.0" layoutY="173.0" text="Language" />
                      </children></AnchorPane>
                </content>
             </Tab>
