--- a/src/main/resources/fxml/OptionsWindow.fxml
+++ b/src/main/resources/fxml/OptionsWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="320.0" maxWidth="560.0" minHeight="320.0" minWidth="560.0" prefHeight="320.0" prefWidth="560.0" styleClass="root" stylesheets="@/styles/optionsWindow.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.OptionsWindowController">
+<AnchorPane maxHeight="320.0" maxWidth="560.0" minHeight="320.0" minWidth="560.0" prefHeight="320.0" prefWidth="560.0" styleClass="root" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.OptionsWindowController">
    <children>
       <TabPane fx:id="tabPane" prefHeight="320.0" prefWidth="560.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
@@ -21,13 +21,13 @@
                         <Label layoutX="18.0" layoutY="49.0" text="Device Profile" />
                         <Label layoutX="14.0" layoutY="78.0" />
                         <TextField fx:id="manualScaleSizeTextField" layoutX="201.0" layoutY="79.0" prefHeight="23.0" prefWidth="151.0" />
-                        <Label layoutX="18.0" layoutY="83.0" text="Manual Scale Size" />
+                        <Label layoutX="26.0" layoutY="83.0" text="Manual Scale Size" />
                         <CheckBox fx:id="manualScaleEnableCheckBox" contentDisplay="RIGHT" layoutX="295.0" layoutY="110.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enable" />
-                        <TextField fx:id="deviceDirectoryTextField" layoutX="201.0" layoutY="134.0" prefHeight="25.0" prefWidth="88.0" />
-                        <Label layoutX="18.0" layoutY="137.0" text="Device Directory" />
-                        <Button fx:id="changeDirectoryButton" layoutX="295.0" layoutY="134.0" mnemonicParsing="false" text="Change" />
-                        <ComboBox fx:id="languageComboBox" layoutX="202.0" layoutY="169.0" prefWidth="150.0" />
-                        <Label layoutX="19.0" layoutY="173.0" text="Language" />
+                        <TextField fx:id="deviceDirectoryTextField" layoutX="202.0" layoutY="147.0" prefHeight="25.0" prefWidth="88.0" />
+                        <Label layoutX="22.0" layoutY="152.0" text="Device Directory" />
+                        <Button fx:id="changeDirectoryButton" layoutX="295.0" layoutY="144.0" mnemonicParsing="false" text="Change" />
+                        <ComboBox fx:id="languageComboBox" layoutX="202.0" layoutY="188.0" prefWidth="150.0" />
+                        <Label layoutX="22.0" layoutY="192.0" text="Language" />
                      </children></AnchorPane>
                </content>
             </Tab>
